k8s/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exploding-clusters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exploding-clusters
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: exploding-clusters
    spec:
      containers:
        - name: node
          image: gcr.io/thockin-joonix-dev/xco:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /infoz
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: exploding-clusters
  annotations:                                                                                                                                                               
    cloud.google.com/backend-config: '{"default": "exploding-clusters"}'                                                                                                     
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: exploding-clusters
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exploding-clusters
spec:
  defaultBackend:
    # FIXME: block infoz
    service:
      name: exploding-clusters
      port:
        number: 80
